set(SOURCES
        AggressivePlayer.cpp
        BenevolentPlayer.cpp
        Card.cpp
		CheaterPlayer.cpp
		ContinentControlObserverDecorator.cpp
        Country.cpp
        Deck.cpp
        DiceFacility.cpp
        Die.cpp
		Game.cpp
		GameStatisticsObserver.cpp
        Hand.cpp
        HumanPlayer.cpp
        Map.cpp
        MapLoader.cpp
		Observer.cpp
		ObserverDecorator.cpp
        Player.cpp
		PlayerDominationObserverDecorator.cpp
		PlayerHandsObserverDecorator.cpp
		RandomPlayer.cpp
        Strategy.cpp
		Subject.cpp
		Tournament.cpp
		UserInterface.cpp)
set(HEADERS
		AggressivePlayer.h
		BenevolentPlayer.h
        Card.h
		CheaterPlayer.h
		ContinentControlObserverDecorator.h
        Country.h
        Deck.h
        DiceFacility.h
        Die.h
		Game.h
		GameStatisticsObserver.h
        Hand.h
		HumanPlayer.h
        Map.h
        MapLoader.h
		Observer.h
		ObserverDecorator.h
        Player.h
		PlayerDominationObserverDecorator.h
		PlayerHandsObserverDecorator.h
		RandomPlayer.h
        Strategy.h
		Subject.h
		Tournament.h
		UserInterface.h)

add_library(Risk STATIC ${SOURCES} ${HEADERS})
add_executable(RiskGame RiskGame.cpp)
target_link_libraries(RiskGame Risk)